chore/fix style.css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <footer class="footer-bluetheme">
         <a href="mailto:contato@techwave.com" class="mailto">contato@techwave.com</a>
             <h6>
-                Redes Sociais
+                Redes Sociais:
                 <a href="#" class="social-media">
                     Facebook
                 </a>
